--- a/public/css/simple-photo-feed-public.css
+++ b/public/css/simple-photo-feed-public.css
@@ -1,25 +1,26 @@
-.sif_container {
+.spf_container {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 0.5rem;
     padding: 1rem;
+    white-space: normal;
 }
-.sif_container.sif_size_small {
+.spf_container.spf_size_small {
     grid-template-columns: repeat(5, 1fr);
 }
 
-.sif_container .sif_item {
+.spf_container .spf_item {
     position: relative;
     padding-bottom: 100%;
     overflow: hidden;
 }
 
-.sif_container.sif_size_small .sif_item {
+.spf_container.spf_size_small .spf_item {
     padding-bottom: 56%;
 }
 
-.sif_container .sif_item img {
+.spf_container .spf_item img {
     position: absolute;
     object-fit: cover;
     width: 100%;
@@ -27,11 +28,11 @@
     transition: all 0.2s ease-in-out;
 }
 
-.sif_container .sif_item img:hover {
+.spf_container .spf_item img:hover {
     transform: scale(1.1);
 }
 
-.sif_caption {
+.spf_caption {
     background: rgba(0, 0, 0, 0.65);
     color: #f0f0f0;
     font-size: 12px;
@@ -39,19 +40,19 @@
 }
 
 @media only screen and (max-width: 768px) {
-    .sif_container {
+    .spf_container {
         grid-template-columns: 1fr 1fr;
     }
-    .sif_container.sif_size_small {
+    .spf_container.spf_size_small {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
 @media only screen and (max-width: 480px) {
-    .sif_container {
+    .spf_container {
         grid-template-columns: 1fr;
     }
-    .sif_container.sif_size_small {
+    .spf_container.spf_size_small {
         grid-template-columns: 1fr 1fr;
     }
 }
