--- a/public/css/simple-photo-feed-public.css
+++ b/public/css/simple-photo-feed-public.css
@@ -22,6 +22,8 @@
 
 .spf_container .spf_item img {
     position: absolute;
+    top: 0;
+    left: 0;
     object-fit: cover;
     width: 100%;
     height: 100%;
