--- a/public/css/simple-photo-feed-public.css
+++ b/public/css/simple-photo-feed-public.css
@@ -1,62 +1,63 @@
 .spf_container {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 0.5rem;
-    padding: 1rem;
-    white-space: normal;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 0.5rem;
+  padding: 1rem;
+  white-space: normal;
 }
 
 .spf_container.spf_size_small {
-    grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 1fr);
 }
 
 .spf_container .spf_item {
-    position: relative;
-    padding-bottom: 100%;
-    overflow: hidden;
+  position: relative;
+  padding-bottom: 100%;
+  overflow: hidden;
 }
 
 .spf_container.spf_size_small .spf_item {
-    padding-bottom: 70%;
+  padding-bottom: 70%;
 }
 
 .spf_container .spf_item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 0;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    transition: all 0.2s ease-in-out;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  transition: all 0.2s ease-in-out;
 }
 
 .spf_container .spf_item img:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .spf_caption {
-    font-size: 11px;
-    padding: 0.5rem;
+  font-size: 11px;
+  padding: 0.5rem;
 }
 
 @media only screen and (max-width: 768px) {
-    .spf_container {
-        grid-template-columns: 1fr 1fr;
-    }
+  .spf_container {
+    grid-template-columns: 1fr 1fr;
+    padding: 1rem 0;
+  }
 
-    .spf_container.spf_size_small {
-        grid-template-columns: repeat(3, 1fr);
-    }
+  .spf_container.spf_size_small {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 @media only screen and (max-width: 480px) {
-    .spf_container {
-        grid-template-columns: 1fr;
-    }
+  .spf_container {
+    grid-template-columns: 1fr;
+  }
 
-    .spf_container.spf_size_small {
-        grid-template-columns: 1fr 1fr;
-    }
+  .spf_container.spf_size_small {
+    grid-template-columns: 1fr 1fr;
+  }
 }
